--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        name: Fetch num squared
+      - name: Fetch num squared
         id: get_square
-        uses: ./ # Uses an action in the root directory
+        uses: ./ 
         with:
           num: 11
       - name: Print the square
