--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
-name: Test Action
-on: [push]
+name : Test Action
+on : [push]
 
-jobs:
-  get-num-square:
-    runs-on: ubuntu-lastest
-    name: Returns the number square
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Fetch num squared
-        id: get_square
-        uses: ./ 
-        with:
-          num: 11
-      - name: Print the square
-        run: echo "${{ steps.get_square.outputs.num_squared }}"
+jobs :
+  get-num-square :
+    runs-on : ubuntu-latest
+    name : Returns of number square
+    steps :
+    - name : Checkout
+      uses : actions/checkout@v2
+    - name : Fetch num squared
+      id : get_square
+      uses : ./
+      with :
+        num : 1
+    - name : Print the square
+      run : echo "${{steps.get_square.outputs.num_squared}}"
